# SQL-Agent-Skill

./: .env.example  .gitignore  main.py  nb.ipynb  pyproject.toml
src/config/: db_config.py  llm_config.py  vectorstore_config.py
src/controller/: workflow.py
src/controller/nodes/: prompt.py  run_query.py  schema_search.py  sql_generator.py
src/controller/sql_agent/: state.py  workflow.py
src/middleware/: run_graph.py
src/routes/: index.py
